# veracode-to-sqlite

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  static-checks.yml  tests.yml
tests/: empty_results.json  sample_results.json  test_basic_load.py  test_database.py
veracode_to_sqlite/: __main__.py  database.py  parser.py
