[tool.poetry]
name = "veracode-to-sqlite"
version = "0.1.0"
description = "Create a SQLite database from a Veracode results file."
authors = ["Nathaniel Knight <nathaniel.ep@gmail.com>"]
license = "MPL 2.0"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
